ConstraintTemplate_disallow_root.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowedrootcontainers
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowedRootContainers
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowedrootcontainers

        violation[{"msg": msg}] {
          input.review.object.spec.template.spec.securityContext.runAsNonRoot == false
          msg := "Containers must not run as root"
        }
