constraint_no_root.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedRootContainers
metadata:
  name: no-root-containers
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
