constraint_serviceaccount.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedServiceAccounts
metadata:
  name: no-default-serviceaccount
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Deployment"]
